@@ -1,5 +1,11 @@
 2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* python/mushin/maemo/main.py:
+	* python/mushin/maemo/start.py:
+	  Add a New menu item to all menu's.
+
+2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* python/mushin/maemo/start.py:
 	  Load and show all thing info before populating, now that we don't
 	  allow actually updating/adding until populated.
